--- a/css/styles.css
+++ b/css/styles.css
@@ -16,13 +16,17 @@
 
 /* styles */
 
-
+body{
+    background-image: url("/images/bg-mobile.svg");
+}
 .wrapper {
     min-height: 100vh;
-    min-height: 100vh;
     text-align: center;
+    background-image: url("images/bg-mobile.svg");
     background-color: var(--violet);
 }
+    
+
 
 .logo {
     width: 120px;
